Colaboratory를 통해 생성됨

--- a/project/yolov3_webcam.ipynb
+++ b/project/yolov3_webcam.ipynb
@@ -6,7 +6,6 @@
       "name": "yolov3_webcam.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP2vMzTWIZO1ewAkcIGx/SF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +28,106 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "FjpykLlBHsjv",
+        "outputId": "cbce345a-6986-401d-dfb5-32a5007663a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "from google.colab import files\n",
+        "from google.colab import auth\n",
+        "from google.cloud import storage\n",
+        "from pydrive.drive import GoogleDrive\n",
+        "from datetime import datetime\n",
+        "import os\n",
+        "\n",
+        "drive.mount('/content/gdrive')\n",
+        "!ls /content/gdrive/\n",
+        "\n",
+        "auth.authenticate_user()\n",
+        "\n",
+        "project_id = 'vocal-oarlock-289106'\n",
+        "!gcloud config set project {project_id}\n",
+        "!gsutil ls\n",
+        "\n",
+        "bucket_name = 'hanium_bucket_201007'"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/gdrive\n",
+            "'My Drive'\n",
+            "Updated property [core/project].\n",
+            "gs://hanium_bucket_201007/\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "28-w2jiIPiZ-"
+      },
+      "source": [
+        "Link with Google Drive and GCP"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RPXYCfVUSZDx",
+        "outputId": "a54cdcfc-5b54-4ca3-c595-4c7f3694c48b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        }
+      },
+      "source": [
+        "now = datetime.now()\n",
+        "fsnow = str(now.year) + '_' + str(now.month) + '_' + str(now.day)\n",
+        "\n",
+        "dirc = '/content/gdrive/My Drive/record_files/' + fsnow\n",
+        "isFile = os.path.isdir(dirc)\n",
+        "\n",
+        "if not isFile:\n",
+        "    os.mkdir(dirc)\n",
+        "\n",
+        "name = fsnow + '/'\n",
+        "storage_client = storage.Client(project_id)\n",
+        "bucket = storage_client.bucket(bucket_name)\n",
+        "stats = storage.Blob(bucket=bucket, name=name).exists(storage_client)\n",
+        "\n",
+        "if (stats == False):\n",
+        "    !gsutil mb gs://{bucket_name}/record_files/{fsnow}/"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "CommandException: The mb command requires a URL that specifies a bucket.\n",
+            "\"gs://hanium_bucket_201007/record_files/2020_10_15/\" is not valid.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "mgF3IWYbAR8H"
       },
       "source": [
         "import base64\n",
         "import html\n",
-        "import io\n",
         "import time\n",
+        "import io\n",
         "\n",
         "from IPython.display import display, Javascript\n",
         "from google.colab.output import eval_js\n",
@@ -174,14 +266,14 @@
         "  data = eval_js('takePhoto(\"{}\", \"{}\")'.format(label, img_data))\n",
         "  return data"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "MBHU-JdmAkcL",
-        "outputId": "6b0cc528-a9fd-4c46-e5a9-7414bec33494",
+        "outputId": "dee1545d-e05b-456f-8c4d-99c3260b5048",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
@@ -199,7 +291,7 @@
         "  if not js_reply:\n",
         "    break"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -358,14 +450,14 @@
         "\n",
         "    return image_array"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "9yoO2J3CA4UP",
-        "outputId": "63bea036-7883-4806-b1fe-bf1110c9c366",
+        "outputId": "1c86e89e-89d3-4db7-b4e8-f345afafb219",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 193
@@ -375,8 +467,8 @@
         "!git clone https://github.com/ultralytics/yolov3.git  # clone\n",
         "%cd yolov3\n",
         "\n",
-        "import argparse\n",
         "from sys import platform\n",
+        "import argparse\n",
         "\n",
         "from models import *\n",
         "from utils.datasets import *\n",
@@ -414,7 +506,7 @@
         "names = load_classes(opt.names)\n",
         "colors = [[random.randint(0, 255) for _ in range(3)] for _ in range(len(names))]"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,12 +515,12 @@
             "remote: Enumerating objects: 5, done.\u001b[K\n",
             "remote: Counting objects: 100% (5/5), done.\u001b[K\n",
             "remote: Compressing objects: 100% (5/5), done.\u001b[K\n",
-            "remote: Total 9445 (delta 0), reused 0 (delta 0), pack-reused 9440\u001b[K\n",
-            "Receiving objects: 100% (9445/9445), 7.82 MiB | 1.40 MiB/s, done.\n",
-            "Resolving deltas: 100% (6471/6471), done.\n",
-            "/content/yolov3/yolov3/yolov3\n",
+            "remote: Total 9445 (delta 0), reused 1 (delta 0), pack-reused 9440\u001b[K\n",
+            "Receiving objects: 100% (9445/9445), 7.82 MiB | 9.72 MiB/s, done.\n",
+            "Resolving deltas: 100% (6469/6469), done.\n",
+            "/content/yolov3\n",
             "Model Summary: 225 layers, 6.29987e+07 parameters, 6.29987e+07 gradients\n",
-            "Downloading https://drive.google.com/uc?export=download&id=1UcR-zVoMs7DH5dj3N1bswkiQTA4dmKF4 as weights/yolov3-spp-ultralytics.pt... Done (4.5s)\n"
+            "Downloading https://drive.google.com/uc?export=download&id=1UcR-zVoMs7DH5dj3N1bswkiQTA4dmKF4 as weights/yolov3-spp-ultralytics.pt... Done (2.9s)\n"
           ],
           "name": "stdout"
         }
@@ -467,6 +559,7 @@
         "\n",
         "    # Process detections\n",
         "    det = pred[0]\n",
+        "    str_obj = ''\n",
         "    if det is not None and len(det):\n",
         "        det[:, :4] = scale_coords(img.shape[2:], det[:, :4], image_array.shape).round()\n",
         "\n",
@@ -474,13 +567,18 @@
         "        for *xyxy, conf, cls in det:\n",
         "            label = '%s %.2f' % (names[int(cls)], conf)\n",
         "            plot_one_box(xyxy, drawing_array, label=label, color=colors[int(cls)])\n",
-        "            print(names[int(cls)])\n",
+        "            str_obj = str_obj + \"\\n\" + names[int(cls)]            \n",
         "\n",
         "    drawing_array[:,:,3] = (drawing_array.max(axis = 2) > 0 ).astype(int) * 255\n",
+        "    print(str_obj)\n",
+        "    f = open('/content/gdrive/My Drive/record_files/' + fsnow + '/' + 'objects.txt', 'w')\n",
+        "    f.write(names[int(cls)] + '\\n------------------\\n')\n",
+        "    f.close()            \n",
+        "    !gsutil cp -r /content/gdrive/My\\ Drive/record_files/{fsnow}/objects.txt gs://{bucket_name}/record_files/{fsnow}/\n",
         "\n",
         "    return drawing_array"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -515,7 +613,7 @@
         "    drawing_bytes = 'data:image/png;base64,{}'.format((str(base64.b64encode(iobuf.getvalue()), 'utf-8')))\n",
         "    return drawing_bytes"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -530,96 +628,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FjpykLlBHsjv",
-        "outputId": "b8a9ce2d-127f-4796-ade9-3e5e1c4c7f20",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 87
-        }
-      },
-      "source": [
-        "from google.colab import drive\n",
-        "from google.colab import files\n",
-        "from google.colab import auth\n",
-        "from google.cloud import storage\n",
-        "from pydrive.drive import GoogleDrive\n",
-        "\n",
-        "drive.mount('/content/gdrive')\n",
-        "!ls /content/gdrive/\n",
-        "\n",
-        "auth.authenticate_user()\n",
-        "\n",
-        "project_id = 'vocal-oarlock-289106'\n",
-        "!gcloud config set project {project_id}\n",
-        "!gsutil ls\n",
-        "\n",
-        "bucket_name = 'hanium_bucket_201007'"
-      ],
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n",
-            "'My Drive'\n",
-            "Updated property [core/project].\n",
-            "gs://hanium_bucket_201007/\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "QzbT6gmvH9_A"
-      },
-      "source": [
-        "Link with Google Drive and GCP"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "_pqB0d5WBK11",
-        "outputId": "79a83ca0-ca1e-4a47-81f8-cf20d2f825d5",
+        "outputId": "e5d2451f-9888-4bfe-953c-89e2e36790f4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 545
+          "height": 721
         }
       },
       "source": [
-        "from datetime import datetime\n",
         "from io import BytesIO\n",
         "from base64 import b64decode\n",
         "import operator\n",
+        "\n",
+        "now = datetime.now()\n",
+        "snow = str(now.year) + '_' + str(now.month) + '_' + str(now.day) + '_' + str(now.hour + 9) + '_' + str(now.minute) + '_' + str(now.second)\n",
         "\n",
         "start_input()\n",
         "label_html = 'Capturing...'\n",
         "img_data = ''\n",
         "count = 0\n",
         "\n",
-        "now = datetime.now()\n",
-        "snow = str(now.year) + '_' + str(now.month) + '_' + str(now.day) + '_' + str(now.hour + 9) + '_' + str(now.minute) + '_' + str(now.second)\n",
-        "fsnow = str(now.year) + '_' + str(now.month) + '_' + str(now.day)\n",
-        "\n",
         "fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
         "writer = cv2.VideoWriter('/content/gdrive/My Drive/record_files/' + fsnow + '/' + snow + '.avi', fourcc, 1.0, (512, 512))\n",
         "filename = snow + '.avi'\n",
-        "\n",
-        "path = '/content/gdrive/My Drive/record_files/' + fsnow + '/'\n",
-        "isFile = os.path.isfile(path)\n",
-        "\n",
-        "if isFile:\n",
-        "    os.mkdir(path)\n",
-        "\n",
-        "name = fsnow + '/'\n",
-        "storage_client = storage.Client(project_id)\n",
-        "bucket = storage_client.bucket(bucket_name)\n",
-        "stats = storage.Blob(bucket=bucket, name=name).exists(storage_client)\n",
-        "\n",
-        "if not stats:\n",
-        "    !gsutil mb gs://{bucket_name}/record_files/{fsnow}/\n",
         "\n",
         "while True:\n",
         "    js_reply = take_photo(label_html, img_data)\n",
@@ -653,7 +684,7 @@
         "cv2.destroyAllWindows()\n",
         "!gsutil cp -r /content/gdrive/My\\ Drive/record_files/{fsnow}/{filename} gs://{bucket_name}/record_files/{fsnow}/"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -794,36 +825,46 @@
         {
           "output_type": "stream",
           "text": [
-            "CommandException: The mb command requires a URL that specifies a bucket.\n",
-            "\"gs://hanium_bucket_201007/record_files/2020_10_13/\" is not valid.\n",
-            "clock\n",
+            "\n",
             "person\n",
-            "clock\n",
+            "Copying file:///content/gdrive/My Drive/record_files/2020_10_15/objects.txt [Content-Type=text/plain]...\n",
+            "/ [1 files][   26.0 B/   26.0 B]                                                \n",
+            "Operation completed over 1 objects/26.0 B.                                       \n",
+            "\n",
             "person\n",
-            "clock\n",
+            "refrigerator\n",
+            "Copying file:///content/gdrive/My Drive/record_files/2020_10_15/objects.txt [Content-Type=text/plain]...\n",
+            "/ [1 files][   32.0 B/   32.0 B]                                                \n",
+            "Operation completed over 1 objects/32.0 B.                                       \n",
+            "\n",
             "person\n",
-            "clock\n",
+            "Copying file:///content/gdrive/My Drive/record_files/2020_10_15/objects.txt [Content-Type=text/plain]...\n",
+            "/ [1 files][   26.0 B/   26.0 B]                                                \n",
+            "Operation completed over 1 objects/26.0 B.                                       \n",
+            "\n",
             "person\n",
-            "clock\n",
+            "refrigerator\n",
+            "Copying file:///content/gdrive/My Drive/record_files/2020_10_15/objects.txt [Content-Type=text/plain]...\n",
+            "/ [1 files][   32.0 B/   32.0 B]                                                \n",
+            "Operation completed over 1 objects/32.0 B.                                       \n",
+            "\n",
             "person\n",
-            "clock\n",
+            "Copying file:///content/gdrive/My Drive/record_files/2020_10_15/objects.txt [Content-Type=text/plain]...\n",
+            "/ [1 files][   26.0 B/   26.0 B]                                                \n",
+            "Operation completed over 1 objects/26.0 B.                                       \n",
+            "\n",
             "person\n",
-            "clock\n",
+            "Copying file:///content/gdrive/My Drive/record_files/2020_10_15/objects.txt [Content-Type=text/plain]...\n",
+            "/ [1 files][   26.0 B/   26.0 B]                                                \n",
+            "Operation completed over 1 objects/26.0 B.                                       \n",
+            "\n",
             "person\n",
-            "clock\n",
-            "teddy bear\n",
-            "person\n",
-            "clock\n",
-            "person\n",
-            "clock\n",
-            "person\n",
-            "clock\n",
-            "person\n",
-            "clock\n",
-            "person\n",
-            "Copying file:///content/gdrive/My Drive/record_files/2020_10_13/2020_10_13_14_11_17.avi [Content-Type=video/x-msvideo]...\n",
-            "/ [1 files][155.1 KiB/155.1 KiB]                                                \n",
-            "Operation completed over 1 objects/155.1 KiB.                                    \n"
+            "Copying file:///content/gdrive/My Drive/record_files/2020_10_15/objects.txt [Content-Type=text/plain]...\n",
+            "/ [1 files][   26.0 B/   26.0 B]                                                \n",
+            "Operation completed over 1 objects/26.0 B.                                       \n",
+            "Copying file:///content/gdrive/My Drive/record_files/2020_10_15/2020_10_15_19_5_8.avi [Content-Type=video/x-msvideo]...\n",
+            "-\n",
+            "Operation completed over 1 objects/112.1 KiB.                                    \n"
           ],
           "name": "stdout"
         }
