--- a/project/edge_detection.ipynb
+++ b/project/edge_detection.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "edge_detection.ipynb의 사본",
+      "name": "edge_detection.ipynb",
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
@@ -87,6 +87,7 @@
         "      if (div !== null) {\n",
         "        return stream;\n",
         "      }\n",
+        "\n",
         "      div = document.createElement('div');\n",
         "      div.style.border = '2px solid black';\n",
         "      div.style.padding = '3px';\n",
@@ -110,6 +111,7 @@
         "      stream = await navigator.mediaDevices.getUserMedia(\n",
         "          {video: { facingMode: \"environment\"}});\n",
         "      div.appendChild(video);\n",
+        "\n",
         "      imgElement = document.createElement('img');\n",
         "      imgElement.style.position = 'absolute';\n",
         "      imgElement.style.zIndex = 1;\n",
@@ -125,6 +127,7 @@
         "      \n",
         "      video.srcObject = stream;\n",
         "      await video.play();\n",
+        "\n",
         "      captureCanvas = document.createElement('canvas');\n",
         "      captureCanvas.width = 512; //video.videoWidth;\n",
         "      captureCanvas.height = 512; //video.videoHeight;\n",
@@ -138,6 +141,7 @@
         "        shutdown = false;\n",
         "        return '';\n",
         "      }\n",
+        "\n",
         "      var preCreate = Date.now();\n",
         "      stream = await createDom();\n",
         "      \n",
@@ -188,33 +192,11 @@
         "img_data = ''\n",
         "\n",
         "while True:\n",
-        "  capture_start = time.time()\n",
+        "  capture_start = time.time()  \n",
         "  js_reply = take_photo(label_html, img_data)\n",
         "  capture_end = time.time()\n",
         "  if not js_reply:\n",
         "    break"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sMaDKpHh1Niu"
-      },
-      "source": [
-        "def js_reply_to_image(js_reply):\n",
-        "    \"\"\"\n",
-        "    input: \n",
-        "          js_reply: JavaScript object, contain image from webcam\n",
-        "    output: \n",
-        "          image_array: image array RGB size 512 x 512 from webcam\n",
-        "    \"\"\"\n",
-        "    jpeg_bytes = base64.b64decode(js_reply['img'].split(',')[1])\n",
-        "    image_PIL = Image.open(io.BytesIO(jpeg_bytes))\n",
-        "    image_array = np.array(image_PIL)\n",
-        "\n",
-        "    return image_array"
       ],
       "execution_count": null,
       "outputs": []
@@ -246,6 +228,137 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "nsQIUnHt4uuf"
+      },
+      "source": [
+        "!git clone https://github.com/ultralytics/yolov3.git  # clone\n",
+        "%cd yolov3\n",
+        "\n",
+        "from sys import platform\n",
+        "import argparse\n",
+        "\n",
+        "from models import *\n",
+        "from utils.datasets import *\n",
+        "from utils.utils import *\n",
+        "from absl.flags import FLAGS\n",
+        "from absl import app, flags, logging\n",
+        "\n",
+        "parser = argparse.ArgumentParser()\n",
+        "parser.add_argument('--cfg', type=str, default='cfg/yolov3-spp.cfg', help='*.cfg path')\n",
+        "parser.add_argument('--names', type=str, default='data/coco.names', help='*.names path')\n",
+        "parser.add_argument('--weights', type=str, default='weights/yolov3-spp-ultralytics.pt', help='weights path')\n",
+        "parser.add_argument('--img-size', type=int, default=416, help='inference size (pixels)')\n",
+        "parser.add_argument('--conf-thres', type=float, default=0.3, help='object confidence threshold')\n",
+        "parser.add_argument('--iou-thres', type=float, default=0.6, help='IOU threshold for NMS')\n",
+        "parser.add_argument('--classes', nargs='+', type=int, help='filter by class')\n",
+        "parser.add_argument('--agnostic-nms', action='store_true', help='class-agnostic NMS')\n",
+        "opt = parser.parse_args(args = [])\n",
+        "\n",
+        "# Initialize\n",
+        "device = 'cuda:0' if torch.cuda.is_available() else 'cpu'\n",
+        "\n",
+        "# Initialize model\n",
+        "model = Darknet(opt.cfg, opt.img_size)\n",
+        "\n",
+        "# Load weights\n",
+        "attempt_download(opt.weights)\n",
+        "if opt.weights.endswith('.pt'):  # pytorch format\n",
+        "    model.load_state_dict(torch.load(opt.weights, map_location=device)['model'])\n",
+        "else:  # darknet format\n",
+        "    load_darknet_weights(model, opt.weights)\n",
+        "\n",
+        "model.to(device).eval();\n",
+        "\n",
+        "# Get names and colors\n",
+        "names = load_classes(opt.names)\n",
+        "colors = [[random.randint(0, 255) for _ in range(3)] for _ in range(len(names))]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sMaDKpHh1Niu"
+      },
+      "source": [
+        "def js_reply_to_image(js_reply):\n",
+        "    \"\"\"\n",
+        "    input: \n",
+        "          js_reply: JavaScript object, contain image from webcam\n",
+        "    output: \n",
+        "          image_array: image array RGB size 512 x 512 from webcam\n",
+        "    \"\"\"\n",
+        "    jpeg_bytes = base64.b64decode(js_reply['img'].split(',')[1])\n",
+        "    image_PIL = Image.open(io.BytesIO(jpeg_bytes))\n",
+        "    image_array = np.array(image_PIL)\n",
+        "\n",
+        "    return image_array\n",
+        "\n",
+        "def get_drawing_array(image_array): \n",
+        "    \"\"\"\n",
+        "    input: \n",
+        "          image_array: image array RGB size 512 x 512 from webcam\n",
+        "    output: \n",
+        "          drawing_array: image RGBA size 512 x 512 only contain bounding box and text, \n",
+        "                              channel A value = 255 if the pixel contains drawing properties (lines, text) \n",
+        "                              else channel A value = 0\n",
+        "    \"\"\"\n",
+        "    name_l = []\n",
+        "    drawing_array = np.zeros([512,512,4], dtype=np.uint8)\n",
+        "    img = letterbox(image_array, new_shape=opt.img_size)[0]\n",
+        "\n",
+        "    img = img.transpose(2, 0, 1)\n",
+        "    img = np.ascontiguousarray(img)\n",
+        "\n",
+        "    img = torch.from_numpy(img).to(device)\n",
+        "    img = img.float()  # uint8 to fp16/32\n",
+        "    img /= 255.0  # 0 - 255 to 0.0 - 1.0\n",
+        "    if img.ndimension() == 3:\n",
+        "        img = img.unsqueeze(0)\n",
+        "\n",
+        "    pred = model(img)[0]\n",
+        "    # Apply NMS\n",
+        "    pred = non_max_suppression(pred, opt.conf_thres, opt.iou_thres, classes=opt.classes, agnostic=opt.agnostic_nms)\n",
+        "\n",
+        "    # Process detections\n",
+        "    det = pred[0]\n",
+        "    str_obj = ''\n",
+        "    if det is not None and len(det):\n",
+        "        det[:, :4] = scale_coords(img.shape[2:], det[:, :4], image_array.shape).round()\n",
+        "\n",
+        "        # Write results\n",
+        "        for *xyxy, conf, cls in det:\n",
+        "            label = '%s %.2f' % (names[int(cls)], conf)\n",
+        "            plot_one_box(xyxy, drawing_array, label=label, color=colors[int(cls)])\n",
+        "            name_l.append(names[int(cls)])\n",
+        "\n",
+        "    drawing_array[:,:,3] = (drawing_array.max(axis = 2) > 0 ).astype(int) * 255    \n",
+        "    return drawing_array, name_l\n",
+        "\n",
+        "def drawing_array_to_bytes(drawing_array):\n",
+        "    \"\"\"\n",
+        "    input: \n",
+        "          drawing_array: image RGBA size 512 x 512 \n",
+        "                              contain bounding box and text from yolo prediction, \n",
+        "                              channel A value = 255 if the pixel contains drawing properties (lines, text) \n",
+        "                              else channel A value = 0\n",
+        "    output: \n",
+        "          drawing_b64: string, encoded from drawing_array\n",
+        "    \"\"\"\n",
+        "\n",
+        "    drawing_PIL = Image.fromarray(drawing_array, 'RGBA')\n",
+        "    iobuf = io.BytesIO()\n",
+        "    drawing_PIL.save(iobuf, format='png')\n",
+        "    drawing_bytes = 'data:image/png;base64,{}'.format((str(base64.b64encode(iobuf.getvalue()), 'utf-8')))\n",
+        "    return drawing_bytes"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "OBuRNBeN1YjK"
       },
       "source": [
@@ -253,106 +366,140 @@
         "from scipy import ndimage\n",
         "from datetime import datetime\n",
         "from matplotlib import pyplot as plt\n",
-        "\n",
-        "fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
-        "writer = cv2.VideoWriter('/content/gdrive/My Drive/record_files2/output.avi', fourcc, 30, (512, 512))\n",
+        "from io import BytesIO\n",
+        "from base64 import b64decode\n",
+        "import operator\n",
         "\n",
         "start_input()\n",
         "label_html = 'Capturing...'\n",
         "img_data = ''\n",
-        "count = 0 \n",
+        "name_l = []\n",
+        "\n",
+        "now = datetime.now()\n",
+        "snow = str(now.year) + '_' + str(now.month) + '_' + str(now.day) + '_' + str(now.hour + 9) + '_' + str(now.minute) + '_' + str(now.second)\n",
+        "\n",
+        "fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
+        "writer = cv2.VideoWriter('/content/gdrive/My Drive/record_files2/' + snow + '.mp4', fourcc, 1.0, (512, 512))\n",
+        "filename = snow + '.mp4'\n",
         "\n",
         "while True:\n",
+        "    now = datetime.now()\n",
+        "    snow = str(now.year) + '_' + str(now.month) + '_' + str(now.day) + '_' + str(now.hour + 9) + '_' + str(now.minute) + '_' + str(now.second)\n",
         "    js_reply = take_photo(label_html, img_data)\n",
+        "\n",
         "    if not js_reply:\n",
         "        break\n",
         "\n",
         "    image = js_reply_to_image(js_reply)\n",
-        "    gray_image = cv2.cvtColor(image, cv2.COLOR_RGB2GRAY)\n",
+        "    \n",
+        "    if 'person' in name_l:\n",
         "\n",
-        "    image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
-        "    writer.write(image)\n",
+        "        drawing_array, name_l = get_drawing_array(image)\n",
+        "        drawing_bytes = drawing_array_to_bytes(drawing_array)\n",
+        "        img_data = drawing_bytes\n",
+        "        ed_image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+        "        drawing_array = cv2.cvtColor(drawing_array, cv2.COLOR_RGBA2BGR)\n",
         "\n",
-        "    now = datetime.now()\n",
-        "    snow = str(now.year) + '_' + str(now.month) + '_' + str(now.day) + '_' + str(now.hour + 9) + '_' + str(now.minute) + '_' + str(now.second)\n",
+        "        cv2.imwrite('/content/gdrive/My Drive/record_files2/images/' + snow + '.png', ed_image)\n",
         "\n",
-        "    cv2.imwrite('/content/gdrive/My Drive/record_files2/color_images/' + snow + '.png', image)\n",
-        "    cv2.imwrite('/content/gdrive/My Drive/record_files2/gray_images/' + snow + '(2).png', gray_image)\n",
-        "    filename = snow + '.png'\n",
-        "    filename2 = snow + '(2).png'\n",
-        "    !gsutil cp -r /content/gdrive/My\\ Drive/record_files2/color_images/{filename} gs://{bucket_name}/record_files2/color_images/\n",
-        "    !gsutil cp -r /content/gdrive/My\\ Drive/record_files2/gray_images/{filename2} gs://{bucket_name}/record_files2/gray_images/\n",
+        "        x = []\n",
+        "        y = []\n",
+        "        img = drawing_array[:,:,0] # convert to 2D array\n",
+        "        row, col = img.shape\n",
+        "        for i in range(row):\n",
+        "            for j in range(col):\n",
+        "                if img[i,j] != 0:\n",
+        "                    x.append(i) # get x indices\n",
+        "                    y.append(j) # get y indices\n",
         "\n",
-        "writer.release()\n",
-        "cv2.destroyAllWindows()\n",
-        "!gsutil cp -r /content/gdrive/My\\ Drive/record_files2/output.avi gs://{bucket_name}/record_files2/ # 구글 드라이브에 있는 파일을 구글클라우드에 저장\n",
+        "        for i in range(len(x)):\n",
+        "            image[x[i],y[i]] = (0, 0, 0)\n",
         "\n",
-        "image_folder = '/content/gdrive/My Drive/record_files2/gray_images'\n",
-        "image_folder2 = '/content/gdrive/My Drive/record_files2/ed_images'\n",
-        "video_name = '/content/gdrive/My Drive/record_files2/' + snow + '.avi'\n",
+        "        yolo_img = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
+        "        writer.write(yolo_img + drawing_array)\n",
+        "    \n",
+        "    else:\n",
+        "        \n",
+        "        image2 = cv2.cvtColor(image, cv2.COLOR_RGB2GRAY)\n",
+        "        drawing_array, name_l = get_drawing_array(image)\n",
+        "        drawing_bytes = drawing_array_to_bytes(drawing_array)\n",
+        "        img_data = drawing_bytes\n",
+        "        cv2.imwrite('/content/gdrive/My Drive/record_files2/gray_images/' + snow + '.png', image2)\n",
         "\n",
+        "        drawing_array = cv2.cvtColor(drawing_array, cv2.COLOR_RGBA2BGR)\n",
+        "\n",
+        "        x = []\n",
+        "        y = []\n",
+        "        img = drawing_array[:,:,0] # convert to 2D array\n",
+        "        row, col = img.shape\n",
+        "        for i in range(row):\n",
+        "            for j in range(col):\n",
+        "                if img[i,j] != 0:\n",
+        "                    x.append(i) # get x indices\n",
+        "                    y.append(j) # get y indices\n",
+        "\n",
+        "        for i in range(len(x)):\n",
+        "            image[x[i],y[i]] = (0, 0, 0)\n",
+        "\n",
+        "        yolo_img = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
+        "        writer.write(yolo_img + drawing_array)\n",
+        "\n",
+        "        inimg = plt.imread('/content/gdrive/My Drive/record_files2/gray_images/' + snow + '.png')\n",
+        "        inimg = np.uint8(255*inimg)\n",
+        "\n",
+        "        # =============================================================================\n",
+        "        # # edge detection\n",
+        "        # =============================================================================\n",
+        "        x,y = inimg.shape\n",
+        "        edge = np.zeros(256)\n",
+        "        sobel1 = 1/4*np.array([[1,0,-1],\n",
+        "                              [2,0,-2],\n",
+        "                              [1,0,-1]])\n",
+        "\n",
+        "        sobel2 = 1/4*np.array([[-1,-2,-1],\n",
+        "                              [0,0,0],\n",
+        "                              [1,2,1]])\n",
+        "\n",
+        "        inimg_x = ndimage.convolve(inimg[:,:], sobel1)\n",
+        "        inimg_y = ndimage.convolve(inimg[:,:], sobel2)\n",
+        "\n",
+        "        #x gradient \n",
+        "        inimg_x = np.uint8(inimg_x)\n",
+        "\n",
+        "        #y gradient \n",
+        "        inimg_y = np.uint8(inimg_y)\n",
+        "\n",
+        "        # sobel_inimg = abs(inimg_x) + abs(inimg_y)\n",
+        "        sobel_inimg = (inimg_x**2 + inimg_y**2)**0.5\n",
+        "        sobel_outimg = np.zeros([x,y])\n",
+        "        threshold = 5\n",
+        "\n",
+        "        for i in range(x):\n",
+        "            for j in range(y):\n",
+        "                if (sobel_inimg[i,j] >= threshold):\n",
+        "                    sobel_outimg[i,j] = 0\n",
+        "                else:\n",
+        "                    sobel_outimg[i,j] = 255\n",
+        "\n",
+        "        sobel_outimg = np.float32(sobel_outimg)\n",
+        "        cv2.imwrite('/content/gdrive/My Drive/record_files2/images/' + snow + '.png', sobel_outimg)   \n",
+        "\n",
+        "image_folder = '/content/gdrive/My Drive/record_files2/images'\n",
         "images = [img for img in os.listdir(image_folder) if img.endswith(\".png\")]\n",
-        "num = 0\n",
         "\n",
-        "# input image (gray)\n",
-        "for image in images:\n",
-        "    inimg = plt.imread(os.path.join(image_folder, image))\n",
-        "    inimg = np.uint8(255*inimg)\n",
-        "\n",
-        "    # =============================================================================\n",
-        "    # # edge detection\n",
-        "    # =============================================================================\n",
-        "    x,y = inimg.shape\n",
-        "    edge = np.zeros(256)\n",
-        "    sobel1 = 1/4*np.array([[1,0,-1],\n",
-        "                           [2,0,-2],\n",
-        "                           [1,0,-1]])\n",
-        "\n",
-        "    sobel2 = 1/4*np.array([[-1,-2,-1],\n",
-        "                           [0,0,0],\n",
-        "                           [1,2,1]])\n",
-        "\n",
-        "    inimg_x = ndimage.convolve(inimg[:,:], sobel1)\n",
-        "    inimg_y = ndimage.convolve(inimg[:,:], sobel2)\n",
-        "\n",
-        "    #x gradient \n",
-        "    inimg_x = np.uint8(inimg_x)\n",
-        "\n",
-        "    #y gradient \n",
-        "    inimg_y = np.uint8(inimg_y)\n",
-        "\n",
-        "    # sobel_inimg = abs(inimg_x) + abs(inimg_y)\n",
-        "    sobel_inimg = (inimg_x**2 + inimg_y**2)**0.5\n",
-        "    sobel_outimg = np.zeros([x,y])\n",
-        "    threshold = 5   \n",
-        "\n",
-        "    for i in range(x):\n",
-        "        for j in range(y):\n",
-        "            if (sobel_inimg[i,j] >= threshold):\n",
-        "                sobel_outimg[i,j] = 0\n",
-        "            else:\n",
-        "                sobel_outimg[i,j] = 255\n",
-        "\n",
-        "    sobel_outimg = np.float32(sobel_outimg)\n",
-        "    ed_name = image_folder2 + '/' + str(num) + '.png'\n",
-        "    cv2.imwrite(ed_name, sobel_outimg)\n",
-        "    num += 1\n",
-        "\n",
-        "!gsutil -m cp -r /content/gdrive/My\\ Drive/record_files2/ed_images/ gs://{bucket_name}/record_files2/\n",
-        "\n",
-        "images2 = [img for img in os.listdir(image_folder2) if img.endswith(\".png\")]\n",
-        "frame = cv2.imread(os.path.join(image_folder2, images2[0]))\n",
+        "frame = cv2.imread(os.path.join(image_folder, images[0]))\n",
         "height, width, layers = frame.shape\n",
         "\n",
-        "video = cv2.VideoWriter(video_name, cv2.VideoWriter_fourcc(*'XVID'), 1, (width,height))\n",
+        "video = cv2.VideoWriter('/content/gdrive/My Drive/record_files2/ed_' + filename, cv2.VideoWriter_fourcc(*'mp4v'), 1, (width,height))\n",
         "\n",
-        "for image in images2:\n",
-        "    video.write(cv2.imread(os.path.join(image_folder2, image)))\n",
+        "for image in images:\n",
+        "    video.write(cv2.imread(os.path.join(image_folder, image)))\n",
         "\n",
-        "!gsutil cp -r /content/gdrive/My\\ Drive/record_files2/{snow}.avi gs://{bucket_name}/record_files2/\n",
-        "\n",
+        "writer.release()\n",
+        "video.release()\n",
         "cv2.destroyAllWindows()\n",
-        "video.release()"
+        "\n",
+        "!gsutil cp -r /content/gdrive/My\\ Drive/record_files2/ed_{filename} gs://{bucket_name}/record_files2/      # 구글 드라이브에 있는 파일을 구글클라우드에 저장"
       ],
       "execution_count": null,
       "outputs": []
